# detectify

./: .gitignore  README.md  alembic.ini  docker-compose.yaml  pyproject.toml
apiserver/: app.py  config.py  main.py
apiserver/api/task/: router.py
config/: apiserver.yaml  classifier.yaml  core.yaml  gradio.yaml
detectify/: apiserver.py  config.py  const.py  db.py  vit_longformer.py  webserver.py
detectify/api/task/: router.py
detectify/core/: fastapi.py  faust.py  faustapp.py  task.py
detectify/extractors/: __init__.py  virus_total.py
detectify/helpers/: config.py  dict.py
detectify/tasks/classifier/: app.py
detectify/tasks/classifier/worker/: agents.py  topics.py
detectify/tasks/core/: app.py
detectify/tasks/core/pipeline/: agents.py  models.py  topics.py
migration/: env.py
migration/versions/: 7eaca3eb7039_initial.py
mwdetection/: parsers.py
notebooks/: DL Modelling dual gpu.ipynb  DL modelling.ipynb  Dataset formation.ipynb  Dataset labeling.ipynb  Model Formation.ipynb  Receiving reports.ipynb  Untitled.ipynb  picture formation.ipynb
src/: __init__.py  app_api.py  app_web.py  celery.py  config.py  config_loader.py  constants.py  extractor.py  malware_detection_model.py  parsers.py
src/api/task/: router.py
tasks/: config.py
tasks/classifier/: app.py
tasks/classifier/worker/: agents.py  models.py  topics.py
tasks/core/: app.py
tasks/core/pipeline/: agents.py
